--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "airtable": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.4",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
