--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mantine/form": "^7.9.0",
     "@mantine/hooks": "^7.9.0",
     "@mantine/notifications": "^7.9.0",
+    "@types/uuid": "^9.0.8",
     "airtable": "^0.12.2",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
