--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/form": "^7.9.0",
     "@mantine/hooks": "^7.9.0",
     "@mantine/notifications": "^7.9.0",
+    "@tabler/icons-react": "^3.4.0",
     "@types/uuid": "^9.0.8",
     "airtable": "^0.12.2",
     "date-fns": "^3.6.0",
