--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mantine/form": "^7.9.0",
     "@mantine/hooks": "^7.9.0",
     "@mantine/notifications": "^7.9.0",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@tabler/icons-react": "^3.4.0",
     "@types/uuid": "^9.0.8",
     "airtable": "^0.12.2",
